deployments/rocksolid/overlays/v2/patch-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocksolid
spec:
  template:
    spec:
      containers:
      - name: rocksolid
        image: gijsvandulmen/fixed:latest
        ports:
          - containerPort: 8082
        livenessProbe:
          httpGet:
            port: 8082
        readinessProbe:
          httpGet:
            port: 8082
