deployments/rocksolid/overlays/v2/patch-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rocksolid
spec:
  ports:
  - port: 8080
    targetPort: 8082
    name: http
