deployments/rocksolid/overlays/v2/patch-destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: rocksolid
spec:
    host: rocksolid-v2
    subsets:
    - name: v2
      labels:
        version: v2
